# OS-labs

OS-lab1-console/: script.sh
OS-lab1-console/Number/: number.cpp  number.h
OS-lab1-console/Vector/: vector.cpp  vector.h
OS-lab1-console/testLibs/: main  main.cpp
OS-lab1-linux/: main.out
OS-lab1-linux/Number/: CMakeLists.txt  number.cpp
OS-lab1-linux/Vector/: CMakeLists.txt
OS-lab1-linux/testLibs/: CMakeLists.txt  main.cpp
OS-lab1/Number/: Number.sln
OS-lab1/Number/Number/: Number.vcxproj  Number.vcxproj.filters  number.h
OS-lab1/Number/Output/: Number.idb  Number.lib
OS-lab1/Vector/: Vector.sln
OS-lab1/Vector/Output/: Vector.exp  Vector.lib
OS-lab1/Vector/Vector/: Vector.cpp  Vector.vcxproj  Vector.vcxproj.filters  vector.h
OS-lab1/testLibs/: testLibs.sln
OS-lab1/testLibs/testLibs/: testLibs.vcxproj
OS-lab2/: CMakeLists.txt  main.cpp
OS-lab3/: CMakeLists.txt  buffered_channel.h  main.cpp
OS-lab4/: CMakeLists.txt  buffered_channel.h  main.cpp
OS-lab5-linux/: CMakeLists.txt  main.cpp
OS-lab5-windows/: CMakeLists.txt  main.cpp
OS-lab6-linux/Killer/: CMakeLists.txt  main.cpp
OS-lab6-linux/User/: CMakeLists.txt  main.cpp
OS-lab6/Killer/: CMakeLists.txt  killer.cpp  killer.h  main.cpp
OS-lab6/User/: CMakeLists.txt  main.cpp
OS-lab7-linux/main/: CMakeLists.txt  main.cpp
OS-lab7-linux/pipe/: pipe.cpp  pipe.h
OS-lab7-linux/processA/: CMakeLists.txt  main.cpp
OS-lab7-linux/processM/: CMakeLists.txt  main.cpp
OS-lab7-linux/processP/: CMakeLists.txt  main.cpp
OS-lab7-linux/processS/: CMakeLists.txt  main.cpp
OS-lab7-windows/main/: CMakeLists.txt  main.cpp
OS-lab7-windows/pipe/: CMakeLists.txt  pipe.cpp  pipe.h
OS-lab7-windows/processA/: CMakeLists.txt  main.cpp
OS-lab7-windows/processM/: CMakeLists.txt  main.cpp
OS-lab7-windows/processP/: CMakeLists.txt  main.cpp
OS-lab7-windows/processS/: CMakeLists.txt  main.cpp
OS-newTask/fileMapping/: CMakeLists.txt  fileMapping.cpp  fileMapping.h  myFile.txt
OS-newTask/messageQueue/: CMakeLists.txt  messageQueue.cpp  messageQueue.h
OS-newTask/pipe/: CMakeLists.txt  pipe  pipe.cpp  pipe.h
OS-newTask/processA/: CMakeLists.txt  main.cpp
OS-newTask/processB/: CMakeLists.txt  main.cpp
OS-newTask/sharedMemory/: CMakeLists.txt  sharedMemory  sharedMemory.cpp  sharedMemory.h
OS-newTask/socket/: CMakeLists.txt  clientSocket.cpp  clientSocket.h  serverSocket.cpp  serverSocket.h  socket.cpp  socket.h
